[gd_scene load_steps=7 format=3 uid="uid://db8vjvo3v4mla"]

[ext_resource type="Script" path="res://files/game files/UI_V2/ui.gd" id="1_ovcgi"]
[ext_resource type="StyleBox" uid="uid://d0i0r0f4k64rb" path="res://files/game files/UI_V2/styles/panel.tres" id="2_58y1d"]
[ext_resource type="Texture2D" uid="uid://buue1mh88br0u" path="res://files/game files/UI_V2/icons/setsymb.png" id="3_rdd4v"]
[ext_resource type="Texture2D" uid="uid://c22ct22plo5b4" path="res://files/game files/UI_V2/icons/qeustion mark.jpg" id="4_33x3l"]
[ext_resource type="Texture2D" uid="uid://c3x7usvedkb5k" path="res://files/game files/UI_V2/icons/leave.png" id="5_xuns1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v3iur"]
bg_color = Color(0.0612635, 0.0904829, 0.131047, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.113363, 0.151691, 0.308936, 0.6)
shadow_size = 4

[node name="UI" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ovcgi")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 0.6908

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="Main Menu" type="Panel" parent="AspectRatioContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v3iur")

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/MarginContainer/Main Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer"]
layout_mode = 2

[node name="settings" type="PanelContainer" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/panel = ExtResource("2_58y1d")

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/settings"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/settings/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/settings/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "SETTINGS"

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/settings/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("3_rdd4v")
expand_mode = 3

[node name="settings_button" type="Button" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/settings"]
layout_mode = 2
flat = true

[node name="how to play" type="PanelContainer" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/panel = ExtResource("2_58y1d")

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/how to play"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/how to play/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/how to play/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "HOW TO PLAY"

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/how to play/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("4_33x3l")
expand_mode = 3

[node name="how_to_play_button" type="Button" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/how to play"]
layout_mode = 2
flat = true

[node name="level select" type="PanelContainer" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/panel = ExtResource("2_58y1d")

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/level select"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/level select/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/level select/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "LEVEL SELECT"

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/level select/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("4_33x3l")
expand_mode = 3

[node name="level_select_button" type="Button" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/level select"]
layout_mode = 2
flat = true

[node name="credits" type="PanelContainer" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/panel = ExtResource("2_58y1d")

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/credits"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/credits/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/credits/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "CREDITS"

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/credits/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("4_33x3l")
expand_mode = 3

[node name="credits_button" type="Button" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/credits"]
layout_mode = 2
flat = true

[node name="resume" type="PanelContainer" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/panel = ExtResource("2_58y1d")

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/resume"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/resume/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/resume/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "RESUME"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/resume/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("5_xuns1")
expand_mode = 3
stretch_mode = 5

[node name="resume_button" type="Button" parent="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/resume"]
layout_mode = 2
flat = true

[node name="Settings" type="Panel" parent="AspectRatioContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v3iur")

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/MarginContainer/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/MarginContainer/Settings/MarginContainer"]
layout_mode = 2

[node name="title" type="Label" parent="AspectRatioContainer/MarginContainer/Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "SETTINGS
put sliders n stuff below this in the VBoxContainer"
horizontal_alignment = 1
autowrap_mode = 2

[node name="back" type="PanelContainer" parent="AspectRatioContainer/MarginContainer/Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/panel = ExtResource("2_58y1d")

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/MarginContainer/Settings/MarginContainer/VBoxContainer/back"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/Settings/MarginContainer/VBoxContainer/back/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AspectRatioContainer/MarginContainer/Settings/MarginContainer/VBoxContainer/back/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "BACK"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer/MarginContainer/Settings/MarginContainer/VBoxContainer/back/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("5_xuns1")
expand_mode = 3
stretch_mode = 5

[node name="settings_back_button" type="Button" parent="AspectRatioContainer/MarginContainer/Settings/MarginContainer/VBoxContainer/back"]
layout_mode = 2
flat = true

[node name="How To Play" type="Panel" parent="AspectRatioContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v3iur")

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/MarginContainer/How To Play"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/MarginContainer/How To Play/MarginContainer"]
layout_mode = 2

[node name="title" type="Label" parent="AspectRatioContainer/MarginContainer/How To Play/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "HOW TO PLAY"
horizontal_alignment = 1

[node name="text" type="Label" parent="AspectRatioContainer/MarginContainer/How To Play/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Press C to split
Press SPACE to swap characters
Merge characters by moving both togther
Have fun!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="back" type="PanelContainer" parent="AspectRatioContainer/MarginContainer/How To Play/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/panel = ExtResource("2_58y1d")

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/MarginContainer/How To Play/MarginContainer/VBoxContainer/back"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/How To Play/MarginContainer/VBoxContainer/back/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AspectRatioContainer/MarginContainer/How To Play/MarginContainer/VBoxContainer/back/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "BACK"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer/MarginContainer/How To Play/MarginContainer/VBoxContainer/back/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("5_xuns1")
expand_mode = 3
stretch_mode = 5

[node name="how_to_play_back_button" type="Button" parent="AspectRatioContainer/MarginContainer/How To Play/MarginContainer/VBoxContainer/back"]
layout_mode = 2
flat = true

[node name="Level Select" type="Panel" parent="AspectRatioContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v3iur")

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/MarginContainer/Level Select"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/MarginContainer/Level Select/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="AspectRatioContainer/MarginContainer/Level Select/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="restart level" type="PanelContainer" parent="AspectRatioContainer/MarginContainer/Level Select/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/panel = ExtResource("2_58y1d")

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/MarginContainer/Level Select/MarginContainer/VBoxContainer/restart level"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/Level Select/MarginContainer/VBoxContainer/restart level/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AspectRatioContainer/MarginContainer/Level Select/MarginContainer/VBoxContainer/restart level/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "RESTART LEVEL"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer/MarginContainer/Level Select/MarginContainer/VBoxContainer/restart level/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
expand_mode = 3
stretch_mode = 5

[node name="restart_button" type="Button" parent="AspectRatioContainer/MarginContainer/Level Select/MarginContainer/VBoxContainer/restart level"]
layout_mode = 2
flat = true

[node name="back" type="PanelContainer" parent="AspectRatioContainer/MarginContainer/Level Select/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = ExtResource("2_58y1d")

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/MarginContainer/Level Select/MarginContainer/VBoxContainer/back"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/Level Select/MarginContainer/VBoxContainer/back/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AspectRatioContainer/MarginContainer/Level Select/MarginContainer/VBoxContainer/back/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "BACK"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer/MarginContainer/Level Select/MarginContainer/VBoxContainer/back/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("5_xuns1")
expand_mode = 3
stretch_mode = 5

[node name="level_select_back_button" type="Button" parent="AspectRatioContainer/MarginContainer/Level Select/MarginContainer/VBoxContainer/back"]
layout_mode = 2
flat = true

[node name="Credits" type="Panel" parent="AspectRatioContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v3iur")

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/MarginContainer/Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/MarginContainer/Credits/MarginContainer"]
layout_mode = 2

[node name="title" type="Label" parent="AspectRatioContainer/MarginContainer/Credits/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "CREDITS"
horizontal_alignment = 1

[node name="text" type="Label" parent="AspectRatioContainer/MarginContainer/Credits/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "put credits in this label "
horizontal_alignment = 1
autowrap_mode = 2

[node name="back" type="PanelContainer" parent="AspectRatioContainer/MarginContainer/Credits/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/panel = ExtResource("2_58y1d")

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/MarginContainer/Credits/MarginContainer/VBoxContainer/back"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/Credits/MarginContainer/VBoxContainer/back/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AspectRatioContainer/MarginContainer/Credits/MarginContainer/VBoxContainer/back/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "BACK"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer/MarginContainer/Credits/MarginContainer/VBoxContainer/back/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("5_xuns1")
expand_mode = 3
stretch_mode = 5

[node name="credits_back_button" type="Button" parent="AspectRatioContainer/MarginContainer/Credits/MarginContainer/VBoxContainer/back"]
layout_mode = 2
flat = true

[connection signal="button_up" from="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/settings/settings_button" to="." method="_on_settings_button_button_up"]
[connection signal="button_up" from="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/how to play/how_to_play_button" to="." method="_on_how_to_play_button_button_up"]
[connection signal="button_up" from="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/level select/level_select_button" to="." method="_on_level_select_button_button_up"]
[connection signal="button_up" from="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/credits/credits_button" to="." method="_on_credits_button_button_up"]
[connection signal="button_up" from="AspectRatioContainer/MarginContainer/Main Menu/MarginContainer/VBoxContainer/resume/resume_button" to="." method="_on_resume_button_button_up"]
[connection signal="button_up" from="AspectRatioContainer/MarginContainer/Settings/MarginContainer/VBoxContainer/back/settings_back_button" to="." method="_on_settings_back_button_button_up"]
[connection signal="button_up" from="AspectRatioContainer/MarginContainer/How To Play/MarginContainer/VBoxContainer/back/how_to_play_back_button" to="." method="_on_how_to_play_back_button_button_up"]
[connection signal="button_up" from="AspectRatioContainer/MarginContainer/Level Select/MarginContainer/VBoxContainer/restart level/restart_button" to="." method="_on_restart_button_button_up"]
[connection signal="button_up" from="AspectRatioContainer/MarginContainer/Level Select/MarginContainer/VBoxContainer/back/level_select_back_button" to="." method="_on_level_select_back_button_button_up"]
[connection signal="button_up" from="AspectRatioContainer/MarginContainer/Credits/MarginContainer/VBoxContainer/back/credits_back_button" to="." method="_on_credits_back_button_button_up"]
